--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
       "jsonwebtoken": "^9.0.3",
       "mongoose": "^9.0.2",
       "multer": "^2.0.2",
+      "node-cron": "^4.2.1",
       "pdf2pic": "^3.2.0",
       "qrcode": "^1.5.4",
       "sharp": "^0.34.5",
