--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "sandbox-root",
   "private": true,
   "scripts": {
-    "build": "cd Backend && npm install",
-    "start": "cd Backend && npm start"
+    "start": "node Backend/src/index.js"
   }
 }
