--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sandbox-root",
   "private": true,
   "scripts": {
+    "build": "cd Backend && npm install",
     "start": "cd Backend && node src/index.js"
   }
 }
