--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,3 +1,8 @@
-PORT=5000
-MONGODB_URI=your_mongo_connection_string
-JWT_SECRET=your_super_secret_key
+NODE_ENV=production
+MONGODB_URI=
+JWT_SECRET=
+ADMIN_JWT_SECRET=
+FILE_PREVIEW_SECRET=
+ALLOWED_ORIGINS=
+FRONTEND_URL=
+FRONTEND_URLS=
